--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@
     <!-- Sidenav -->
     <div class="sidenav">
         <div class="profile">
-            <img src="https://imdezcode.files.wordpress.com/2020/02/imdezcode-logo.png" alt="" width="100" height="100">
+            <img src="https://avatars.githubusercontent.com/u/36769231?v=4" alt="" width="100" height="100">
 
             <div class="name">
-                ImDezCode
+                Mohammed Talha S
             </div>
             <div class="job">
-                Web Developer
+                Full Stack Developer
             </div>
         </div>
 
@@ -63,17 +63,17 @@
                         <tr>
                             <td>Name</td>
                             <td>:</td>
-                            <td>ImDezCode</td>
+                            <td>Mohammed Talha</td>
                         </tr>
                         <tr>
                             <td>Email</td>
                             <td>:</td>
-                            <td>imdezcode@gmail.com</td>
+                            <td>talha5189s@gmail.com</td>
                         </tr>
                         <tr>
                             <td>Address</td>
                             <td>:</td>
-                            <td>Bali, Indonesia</td>
+                            <td>Melvishram, India</td>
                         </tr>
                         <tr>
                             <td>Hobbies</td>
@@ -83,12 +83,12 @@
                         <tr>
                             <td>Job</td>
                             <td>:</td>
-                            <td>Web Developer</td>
+                            <td> Developer</td>
                         </tr>
                         <tr>
                             <td>Skill</td>
                             <td>:</td>
-                            <td>PHP, HTML, CSS, Java</td>
+                            <td>PHP, HTML, CSS, Angular, Flutter, Javascript, python, .Net, Java</td>
                         </tr>
                     </tbody>
                 </table>
